[project]
name = "line-stock-chatbot"
version = "0.1.0"
description = "Daily Taiwan stock public subscription notifier for LINE groups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
line-stock-chatbot = "line_stock_chatbot.cli:main"
line-stock-forecast = "line_stock_chatbot.forecast_cli:main"
line-webhook-debug = "line_stock_chatbot.webhook_debug:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
